--- a/pom.xml
+++ b/pom.xml
@@ -62,5 +62,10 @@
   		<artifactId>junit-platform-launcher</artifactId>
   		<version>1.3.1</version>
   	</dependency>
+   <dependency>
+     <groupId>com.google.api-client</groupId>
+     <artifactId>google-api-client</artifactId>
+     <version>1.25.0</version>
+   </dependency>
   </dependencies>
 </project>
